# Teeworlds-OpenBattle

./: .gitignore  CMakeLists.txt  autoexec.cfg.example  bam.lua  readme.txt
cmake/: FindZLIB.cmake
data/ipinfo/: createdir
data/languages/: en-template.json  zh-cn.json  zh-hk.json
data/maps7/: Battlefield1.5.map  Battlefield_Jungle.map  README.txt  Seabattle0.5.map
data/server/languages/: en-template.json  index.json  zh-cn.json  zh-hk.json
datasrc/: crosscompile.py
scripts/: build.py  cmd5.py  download_ipinfo.sh  make_release.py
src/base/: system.c  system.h  vmath.h
src/base/tl/: stream.h
src/engine/: localization.h  message.h  server.h
src/engine/server/: ipcountry.cpp  ipcountry.h  localization.cpp  localization.h  register.cpp  register.h  server.cpp  server.h
src/engine/shared/: config_variables.h  http_request.cpp  http_request.h  jsonparser.cpp  jsonparser.h  netban.cpp  netban.h  network.cpp  network.h  network_client.cpp  network_conn.cpp  network_console.cpp  network_server.cpp  packer.cpp  packer.h  snapshot.cpp  snapshot.h  storage.cpp
src/game/: collision.cpp  collision.h  gamecore.cpp  mapitems.h  tuning.h  variables.h  version.h
src/game/server/: entity.cpp  entity.h  eventhandler.cpp  eventhandler.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  gameworld.h  player.cpp  player.h  sixup_snap.h
src/game/server/entities/: ammo.cpp  ammo.h  battle.cpp  battle.h  bomb.cpp  bomb.h  c4.cpp  c4.h  character.cpp  character.h  check.cpp  check.h  door.cpp  door.h  flag.cpp  guided_projectile.cpp  guided_projectile.h  health.cpp  health.h  health_shot.cpp  health_shot.h  laser.cpp  laser.h  mine.cpp  mine.h  pak.cpp  pak.h  pickup.cpp  projectile.cpp  projectile.h  shield.cpp  shield.h  smoke.cpp  smoke.h  supply_station.cpp  supply_station.h  switch.cpp  switch.h
src/game/server/gamemodes/: ctf.cpp  openbattle.cpp  openbattle.h
src/mastersrv/: mastersrv.h
